2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - fix bug in for..in codegen (gotta use ident, not m_ident)

        * kjs/nodes.cpp:
        (KJS::ForInNode::emitCode):

2008-04-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - Add suport for regexp literals

        * VM/CodeBlock.cpp:
        (KJS::regexpToSourceString):
        (KJS::regexpName):
        (KJS::CodeBlock::dump):
        * VM/CodeBlock.h:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addRegExp):
        (KJS::CodeGenerator::emitNewRegExp):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::RegExpNode::emitCode):
        * kjs/nodes.h:

2008-04-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff

        Add support for for..in nodes
        
        Added two new opcodes to get_pnames and next_pname to handle iterating
        over the set of properties on an object.  This iterator is explicitly
        invalidated and the property name array is released on standard exit
        from the loop, otherwise we rely on GC to do the clean up for us.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitNextPropertyName):
        (KJS::CodeGenerator::emitGetPropertyNames):
        * VM/CodeGenerator.h:
        * VM/JSPropertyNameIterator.cpp: Added.
        (KJS::JSPropertyNameIterator::JSPropertyNameIterator):
        (KJS::JSPropertyNameIterator::type):
        (KJS::JSPropertyNameIterator::toPrimitive):
        (KJS::JSPropertyNameIterator::getPrimitiveNumber):
        (KJS::JSPropertyNameIterator::toBoolean):
        (KJS::JSPropertyNameIterator::toNumber):
        (KJS::JSPropertyNameIterator::toString):
        (KJS::JSPropertyNameIterator::toObject):